@@ -1,3 +1,5 @@
+- add remote-debugger code
+- cleanup of logging statements
 Version 0.0.2
 - pagenation
 - image thumnails
